--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,50 @@
-.DS_STORE
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-/dist/
-/bazel-*
-e2e_test.*
-node_modules
-bower_components
-tools/gulp-tasks/cldr/cldr-data/
+# compiled output
+/dist
+/tmp
+/out-tsc
+# Only exists if Bazel was run
+/bazel-out
 
-# Include when developing application packages.
-pubspec.lock
-.c9
-.idea/
+# dependencies
+/node_modules
+
+# profiling files
+chrome-profiler-events.json
+speed-measure-plugin.json
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
 .settings/
-*.swo
-modules/.settings
-.vscode
-modules/.vscode
+*.sublime-workspace
 
-*.editorconfig
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
-# Don't check in secret files
-*secret.js
-
-# Ignore npm/yarn debug log
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
 npm-debug.log
 yarn-error.log
+testem.log
+/typings
 
-# build-analytics
-.build-analytics
+# System Files
+.DS_Store
+Thumbs.db
 
-# rollup-test output
-/modules/rollup-test/dist/
+# Environment Variables
+.env
+.env.build
